--- a/.github/workflows/prettier-test.yml
+++ b/.github/workflows/prettier-test.yml
@@ -10,6 +10,8 @@ jobs:
       matrix:
         os: [ubuntu-latest, windows-latest, macos-latest]
 
+    runs-on: ${{ matrix.os }}
+
     steps:
       - name: Checkout repository
         uses: actions/checkout@v3
