add github action

--- a/.github/workflows/prettier-test.yml
+++ b/.github/workflows/prettier-test.yml
@@ -28,4 +28,7 @@ jobs:
           cache: 'pnpm'
 
       - name: Run Prettier
+        run: pnpm install
+
+      - name: Run Prettier
         run: pnpm prettier:check
