--- a/.github/workflows/prettier-test.yml
+++ b/.github/workflows/prettier-test.yml
@@ -7,6 +7,8 @@ on:
 jobs:
   prettier-linux:
     strategy:
+      max-parallel: 3
+      fail-fast: false
       matrix:
         os: [ubuntu-latest, windows-latest, macos-latest]
 
